# playlist-creator

./: .env.example  .gitignore  CLAUDE.md  README.md  apple_music_mcp_spec_1.md  generate_apple_music_token.py  generate_token_save.py  get_user_token.html  pyproject.toml
.claude/: settings.local.json
.claude/skills/discover/: SKILL.md
.claude/skills/playlist/: SKILL.md
.claude/skills/playlist-manage/: SKILL.md
.claude/skills/top-songs/: SKILL.md
apple_music_mcp/: __init__.py  apple_music.py  auth.py  cli.py  mcp_server.py  parser.py
examples/: iconic-mpc-producers.md  road_trip.md
playlist_creator/: __init__.py  apple_music.py  cli.py  mcp_server.py
tests/: test_apple_music.py  test_mcp_server.py  test_parser.py
