[tool.poetry]
name = "apple-music-mcp"
version = "0.1.0"
description = "Apple Music MCP server and CLI — search catalog, manage playlists, and more"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "apple_music_mcp"}]

[tool.poetry.dependencies]
python = "^3.10"
cryptography = "^41.0"
mcp = "*"
PyJWT = "^2.8"
python-dotenv = "^1.2.2"
requests = "^2.31"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-mock = "^3.0"

[tool.poetry.scripts]
playlist-creator = "apple_music_mcp.cli:main"
apple-music-mcp = "apple_music_mcp.mcp_server:main"
generate-token = "generate_apple_music_token:main"
generate-token-save = "generate_token_save:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
